--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DATABASE_URL=
 
 # Auth.js Secrets
 
-AUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXTAUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
 
 # Retrieved from GitHub (create oAuth application in account developer settings) can add other providers follow authjs documentation
 # https://authjs.dev/getting-started/providers/github
